--- a/.pages.yml
+++ b/.pages.yml
@@ -7,12 +7,6 @@ content:
     view:
       fields: [ title, tags ]
     fields:
-      - name: layout
-        label: Layout
-        type: select
-        required: true
-        options:
-          values: [ tool, stack ]
       - name: tags
         label: Tags
         type: select
@@ -34,6 +28,9 @@ content:
         label: Image HTML
         type: string
         required: true
+      - name: body
+        label: Body
+        type: rich-text
   - name: bookmarks
     label: Bookmarks
     type: collection
