--- a/.pages.yml
+++ b/.pages.yml
@@ -7,7 +7,26 @@ content:
     view:
       fields: [ title ]
     fields:
+      - name: layout
+        label: Layout
+        type: select
+        required: true
+        options:
+          values: [ tool, stack ]
+      - name: tags
+        label: Tags
+        type: select
+        options:
+          values: [ design, development, productivity, media ]
       
+      - name: summary
+        label: Summary
+        type: string
+        required: true
+      - name: link
+        label: Link
+        type: string
+        required: true
       - name: title
         label: Title
         type: string
