Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -19,10 +19,11 @@ content:
         options:
           values: [ design, development, productivity, media ]
       
-      - name: summary
-        label: Summary
+      - name: image-html
+        label: Image HTML
         type: string
         required: true
+      
       - name: link
         label: Link
         type: string
