--- a/.pages.yml
+++ b/.pages.yml
@@ -7,6 +7,11 @@ content:
     view:
       fields: [ title ]
     fields:
+    
+      - name: lol
+        label: Lol
+        type: string
+        required: true
       - name: layout
         label: Layout
         type: select
