--- a/.pages.yml
+++ b/.pages.yml
@@ -5,7 +5,7 @@ content:
     type: collection
     path: '_tools'
     view:
-      fields: [ title ]
+      fields: [ title, something ]
     fields:
     
       - name: link
